Fixing theme colors, adjusting transitions/animations. Adding more media breakpoints, further nav elements styling, fixing transition/animations spilling over to other medie queries.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,27 +1,26 @@
 :root {
 	font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-	font-size: 16px;
+	font-size: 12px;
 	overflow-y: auto;
 	scroll-behavior: smooth;
 }
 
 [data-theme='light'] {
-	--primary: rgb(0, 0, 0);
-	--secondary: rgb(255, 255, 255);
+	--primary: rgb(250, 250, 250);
+	--secondary: rgb(0, 0, 0);
 	--teal: rgb(0, 200, 200);
-	--gray: rgba(255, 255, 255, 0.5);
+	--gray: rgba(125, 125, 125, 0.5);
 }
 
 [data-theme='dark'] {
-	--primary: rgb(255, 255, 255);
-	--secondary: rgb(0, 0, 0);
+	--primary: rgb(0, 0, 0);
+	--secondary: rgb(240, 240, 240);
 	--teal: rgb(0, 150, 150);
-	--gray: rgba(125, 125, 125, 0.5);
+	--gray: rgba(255, 255, 255, 0.5);
 }
 
 * {
 	box-sizing: border-box;
-	transition: 0.5s ease;
 }
 
 a {
@@ -29,15 +28,14 @@ a {
 	text-decoration: none;
 }
 
-html {
-}
-
 .app {
 	height: 100vh;
 	width: 100%;
 	color: var(--secondary);
 	background-color: var(--primary);
-	transition: 1s ease;
+	transition: 0.75s ease;
+	display: flex;
+	flex-direction: column;
 }
 
 .nav {
@@ -46,83 +44,97 @@ html {
 	right: 0;
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
 	font-weight: 600;
 
 	ul {
 		display: flex;
 		flex-direction: column;
+	}
 
-		li:first-child {
-			a {
-				border-top-left-radius: 1rem;
-			}
+	li {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		text-align: end;
+	}
+
+	li:first-child {
+		a {
+			border-top-left-radius: 0.5rem;
+		}
+	}
+
+	li:not(:last-child) {
+		transition: 0.5s ease;
+		transform-origin: right;
+		animation: rotateOut 0.5s ease forwards;
+	}
+
+	@keyframes rotateOut {
+		0% {
+			transform: rotateY(0);
 		}
 
-		li {
-			display: flex;
-			flex-direction: row;
-			justify-content: flex-end;
-			text-align: end;
-
-			a,
-			.mode {
-				flex: 1;
-				color: var(--secondary);
-				background-color: var(--gray);
-			}
-
-			a,
-			.mode {
-				padding: 1rem;
-				transition: 0.25s ease;
-				cursor: pointer;
-			}
-
-			.mode {
-				display: flex;
-				flex-direction: row;
-				border-bottom-left-radius: 1rem;
-
-				.mode_slider {
-					margin-left: 0.5rem;
-					position: relative;
-					width: 2rem;
-					height: 1rem;
-					padding: 0.125rem;
-					border-radius: 1rem;
-					background-color: var(--primary);
-				}
-
-				.mode_slider_circle {
-					position: absolute;
-					width: 0.75rem;
-					height: 0.75rem;
-					border-radius: 50%;
-					background-color: var(--secondary);
-					transition: 0.75s ease;
-				}
-
-				.mode_slider_circle.light {
-					transform: translateX(1rem);
-				}
-			}
-
-			a:hover,
-			.mode:hover {
-				background-color: var(--teal);
-			}
+		100% {
+			transform: rotateY(90deg);
 		}
+	}
 
-		li:first-child {
-			margin-top: -30rem;
-			transition: 0.5s ease;
-		}
+	li:last-child {
+		margin: 0.5rem 0.75rem;
+		order: -1;
+	}
 
-		li:last-child {
-			margin: 0.75rem 1rem;
-			order: -1;
-		}
+	a,
+	.mode {
+		flex: 1;
+		color: var(--secondary);
+		background-color: var(--gray);
+		padding: 1rem;
+		transition: 0.25s ease;
+		cursor: pointer;
+	}
+
+	a:hover,
+	.mode:hover {
+		background-color: var(--teal);
+		box-shadow: 0 0 0.5rem 0 var(--secondary);
+	}
+
+	a:active,
+	.mode:active {
+		filter: brightness(120%);
+	}
+
+	.mode {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		border-bottom-left-radius: 0.5rem;
+	}
+
+	.mode_slider {
+		margin-left: 0.5rem;
+		position: relative;
+		width: 2rem;
+		height: 1rem;
+		padding: 0.125rem;
+		border-radius: 1rem;
+		background-color: var(--primary);
+		transition: 0.5s ease;
+	}
+
+	.mode_slider_circle {
+		position: absolute;
+		width: 0.75rem;
+		height: 0.75rem;
+		border-radius: 50%;
+		background-color: var(--secondary);
+		transition: 0.5s ease;
+	}
+
+	.mode_slider_circle.light {
+		transform: translateX(1rem);
 	}
 
 	.ham_menu {
@@ -158,8 +170,23 @@ html {
 }
 
 .nav.open_menu {
-	ul li:first-child {
-		margin-top: 0;
+	li:not(:last-child) {
+		transform-origin: right;
+		animation: rotateIn 0.5s ease forwards;
+	}
+
+	@keyframes rotateIn {
+		0% {
+			transform: rotateY(90deg);
+		}
+
+		100% {
+			transform: rotateY(0);
+		}
+	}
+
+	li:last-child {
+		order: -1;
 	}
 
 	.ham_menu {
@@ -178,42 +205,89 @@ html {
 	}
 }
 
-.nav.big_nav {
-	ul {
-		li:first-child {
-			transition: none;
+@media only screen and (min-width: 520px) {
+	.nav {
+		ul {
+			flex-direction: row;
+			align-items: center;
+		}
+
+		li:not(:last-child) {
+			transform-origin: top;
+			animation: rotateOut 0.5s ease forwards;
+		}
+
+		@keyframes rotateOut {
+			0% {
+				transform: rotateX(0);
+			}
+
+			100% {
+				transform: rotateX(90deg);
+			}
+		}
+
+		li:last-child {
+			order: 0;
+		}
+
+		a,
+		.mode {
+			padding: 0.75rem;
+			margin: 0.5rem;
+			border-radius: 0.5rem;
+		}
+	}
+
+	.nav.open_menu {
+		li:not(:last-child) {
+			transform-origin: top;
+			animation: rotateIn 0.5s ease forwards;
+		}
+
+		@keyframes rotateIn {
+			0% {
+				transform: rotateX(90deg);
+			}
+
+			100% {
+				transform: rotateX(0);
+			}
+		}
+
+		li:last-child {
+			order: 0;
 		}
 	}
 }
 
+@media only screen and (min-width: 620px) {
+	:root {
+		font-size: 14px;
+	}
+}
+
 @media only screen and (min-width: 768px) {
+	:root {
+		font-size: 16px;
+	}
+
 	.nav {
-		margin: 0.5rem;
+		li:not(:last-child) {
+			animation: none;
+		}
+
+		li:last-child {
+			display: none;
+		}
 
 		ul {
 			flex-direction: row;
+		}
 
-			li {
-				margin: 0.5rem;
-
-				a,
-				.mode {
-					border-radius: 1rem;
-				}
-			}
-
-			li {
-				text-align: center;
-			}
-
-			li:first-child {
-				margin: 0.5rem;
-			}
-
-			li:last-child {
-				margin: 0;
-				order: -1;
-			}
+		li {
+			margin: 0.5rem;
+			text-align: center;
 		}
 
 		.ham_menu {
@@ -223,6 +297,7 @@ html {
 }
 
 .home {
+	margin-top: 10rem;
 }
 
 .about {
